Security and Admin role added

--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -67,8 +67,13 @@ label.registerUser.name=First Name:
 label.registerUser.surname=Last Name:
 label.registerUser.email=Email:
 label.registerUser.password=Password:
+label.registerUser.role=Role:
 label.registerUser.confirmPassword=Confirm Password:
 label.registerUser.submit=Register Student
+
+
+label.register.role=Role:
+label.register.submit=Register
 
 label.subjectList=All Subjects
 label.subjectList.addSubject=Add Subject
@@ -87,3 +92,35 @@ label.userList.role=Role
 label.userList.edit=Edit
 label.userList.assignQuiz=Assign Quiz
 label.userList.unassignQuiz=Unassign Quiz
+label.userList.registerStudent=Register Student
+label.userList.registerUser=Register Any User
+
+label.avaliableQuizes=Avaliable for passing Quizes
+label.avaliableQuizes.id=Id
+label.avaliableQuizes.name=Name
+label.avaliableQuizes.subject=Subject
+label.avaliableQuizes.startPassing=Start passing
+
+label.passQuestion=Passing Quiz 
+label.passQuestion.answer=Answer
+
+label.personalInfo=Personal Information
+label.personalInfo.name=First Name:
+label.personalInfo.surname=Last Name:
+label.personalInfo.email=Email:
+label.personalInfo.role=Role
+
+label.quizExtenderResult=Result
+label.quizExtenderResult.quizName=Quiz Name
+label.quizExtenderResult.startTime=Start Time
+label.quizExtenderResult.finishTime=Finish Time
+label.quizExtenderResult.rightAnswers=Right Answers
+label.quizExtenderResult.wrongAnswers=Wrong Answers
+label.quizExtenderResult.percent=Percent
+label.quizExtenderResult.questions=Questions
+label.quizExtenderResult.variants=Variants
+label.quizExtenderResult.rightAnswer=Right Answer
+label.quizExtenderResult.yourAnswer=Your Answer
+
+label.quizResult.result=User Results of Quizes
+label.quizResult.id=Id
