Superadmin page added

--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -6,6 +6,7 @@ label.editQuiz=Edit Quiz
 label.removeQuiz=Remove
 label.removeQuizConfirm=Check to Confirm
 label.createQuiz=Create Quiz
+
 label.headerQuizes=Quizes
 label.headerSubjects=Subjects
 label.headerUsers=Users
@@ -16,6 +17,8 @@ label.headerRussianLanguage=Russian
 label.headerUserQuizes=Quizes
 label.headerUserResults=Results
 label.headerUserPersonal=Personal
+label.headerAllUsers= Users
+
 label.addQuestionToQuiz.addQuestion=Add Question to Quiz ID:
 label.Description=Description
 label.addQuestionToQuiz.submitAddQuestion=Add Question
