--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -19,7 +19,7 @@ label.headerUserResults=Results
 label.headerUserPersonal=Personal
 label.headerAllUsers= Users
 
-label.addQuestionToQuiz.addQuestion=Add Question to Quiz ID:
+label.addQuestionToQuiz.addQuestion=Add Question to Quiz:
 label.Description=Description
 label.addQuestionToQuiz.submitAddQuestion=Add Question
 label.createQuiz=Create Quiz
@@ -29,10 +29,10 @@ label.createQuiz.subject=Subject:
 label.createSubject=Create Subject
 label.createSubject.Name=Name:
 label.createSubject.submit=Create Subject
-label.addVariantToQuestion=Add Variant to Question ID:
-label.addVariantToQuestion.targetQuiz=From Quiz Id:
+label.addVariantToQuestion=Add Variant to Question
+label.addVariantToQuestion.targetQuiz= from Quiz:
 label.addVariantToQuestion.description=Description:
-label.addVariantToQuestion.isRightAnswer=Is Right Answer:
+label.addVariantToQuestion.isRightAnswer=Right Answer:
 label.addVariantToQuestion.submit=Add Variant
 label.assignQuiztoUser=Assign Quiz to User ID:
 label.assignQuiztoUser.submit=Assign Quiz
