--- a/src/main/resources/label_ru_RU.properties
+++ b/src/main/resources/label_ru_RU.properties
@@ -1,126 +1,131 @@
-label.allQuizes = All Quizes
-label.id = Id
-label.name = Name
-label.subject = Subject
-label.editQuiz=Edit Quiz
-label.removeQuiz=Remove
-label.removeQuizConfirm=Check to Confirm
-label.createQuiz=Create Quiz
-label.headerQuizes=Quizes
-label.headerSubjects=Subjects
-label.headerUsers=Users
-label.headerLogOut=Log Out
-label.headerLanguage=Language:
-label.headerEnglishLanguage=English
-label.headerRussianLanguage=Russian
-label.headerUserQuizes=Quizes
-label.headerUserResults=Results
-label.headerUserPersonal=Personal
-label.addQuestionToQuiz.addQuestion=Add Question to Quiz ID:
-label.Description=Description
-label.addQuestionToQuiz.submitAddQuestion=Add Question
-label.createQuiz=Create Quiz
-label.createQuiz.submitCreateQuiz=Create Quiz
-label.createQuiz.name=Name:
-label.createQuiz.subject=Subject:
-label.createSubject=Create Subject
-label.createSubject.Name=Name:
-label.createSubject.submit=Create Subject
-label.addVariantToQuestion=Add Variant to Question ID:
-label.addVariantToQuestion.targetQuiz=From Quiz Id:
-label.addVariantToQuestion.description=Description:
-label.addVariantToQuestion.isRightAnswer=Is Right Answer:
-label.addVariantToQuestion.submit=Add Variant
-label.assignQuiztoUser=Assign Quiz to User ID:
-label.assignQuiztoUser.submit=Assign Quiz
+label.allQuizes = Все тесты
+label.id = Ид
+label.name = Имя
+label.subject = Тема
+label.editQuiz = Править Тест
+label.removeQuiz = Удалить
+label.removeQuizConfirm = Подтвердите
+label.createQuiz = Создать Тест
 
-label.editQuiz=Edit Quiz
-label.editQuiz.quizName=Quiz Name
-label.editQuiz.changeName=Change Name
-label.editQuiz.currentSubject=Quiz Current Subject
-label.editQuiz.avaliableSubject=Avaliable Subjects
-label.editQuiz.changeSubject=Change Subject
-label.editQuiz.editQuestions=Edit questions
-label.editQuiz.addQuestion=Add Question To Quiz
-label.editQuiz.questions=Questions
-label.editQuiz.removeQuestion=Remove
-label.editQuiz.confirmRemove=Confirm Remove
-label.editQuiz.changeDescription=Change Description
-label.editQuiz.variants=Variants:
-label.editQuiz.addVariantToQuestion=Add Variant to Question
-label.editQuiz.description=Description
-label.editQuiz.isRightAnswer=Is Right Answer
-label.editQuiz.changeVariant=Change
-label.editQuiz.removeVariant=Remove
+label.headerQuizes = Тесты
+label.headerSubjects = Темы
+label.headerUsers = Студенты
+label.headerLogOut = Выход
+label.headerLanguage = Язык:
+label.headerEnglishLanguage = английский
+label.headerRussianLanguage = русский
+label.headerUserQuizes = Доступные Тесты
+label.headerUserResults = Результаты
+label.headerUserPersonal = Персональная информация
+label.headerAllUsers = Пользователи
 
-label.editSubject=Edit Subject
-label.editSubject.name=Name:
-label.editSubject.submit=Edit Subject
-label.editUser=Edit Student
-label.editUser.name=First Name:
-label.editUser.surname=Last Name:
-label.editUser.email=Email:
-label.editUser.submit=Edit Student
+label.addQuestionToQuiz.addQuestion = Добавить вопрос к тесту:
 
-label.registerUser=Register Student
-label.registerUser.name=First Name:
-label.registerUser.surname=Last Name:
-label.registerUser.email=Email:
-label.registerUser.password=Password:
-label.registerUser.role=Role:
-label.registerUser.confirmPassword=Confirm Password:
-label.registerUser.submit=Register Student
+label.Description = Описание
+label.addQuestionToQuiz.submitAddQuestion = Добавить вопрос
+label.createQuiz = Создать Тест
+label.createQuiz.submitCreateQuiz = Создать Тест
+label.createQuiz.name = Имя:
+label.createQuiz.subject = Тема:
+label.createSubject = Создать Предмет
+label.createSubject.Name = Имя:
+label.createSubject.submit = Создать Предмет
 
+label.addVariantToQuestion = Добавить Вариант на вопрос 
+label.addVariantToQuestion.targetQuiz = Теста:
+label.addVariantToQuestion.description = Описание:
+label.addVariantToQuestion.isRightAnswer = правильный ответ:
+label.addVariantToQuestion.submit = Добавить Вариант
 
-label.register.role=Role:
-label.register.submit=Register
+label.assignQuiztoUser = Назначить Тест пользователю:
+label.assignQuiztoUser.submit = Назначить Тест
 
-label.subjectList=All Subjects
-label.subjectList.addSubject=Add Subject
-label.subjectList.id=Id
-label.subjectList.name=Name
-label.subjectList.edit=Edit
-label.subjectList.remove=Remove
+label.editQuiz = Править Тест
+label.editQuiz.quizName = Тест
+label.editQuiz.changeName = Изменить имя
+label.editQuiz.currentSubject = Тест Текущий Тема
+label.editQuiz.avaliableSubject = Доступные Предметы
+label.editQuiz.changeSubject = Изменить Тема
+label.editQuiz.editQuestions = Редактировать вопросы
+label.editQuiz.addQuestion = Добавить вопрос тесты
+label.editQuiz.questions = Вопросы
+label.editQuiz.removeQuestion = Удалить
+label.editQuiz.confirmRemove = Подтвердите
+label.editQuiz.changeDescription =  Изменить Описание
+label.editQuiz.variants = Варианты:
+label.editQuiz.addVariantToQuestion = Добавить Вариант ответа
+label.editQuiz.description = Описание
+label.editQuiz.isRightAnswer = Правильный ответ
+label.editQuiz.changeVariant = Изменить
+label.editQuiz.removeVariant = Удалить
 
-label.userList=All Students
-label.userList.id=Id
-label.userList.name=First Name
-label.userList.surname=Last Name
-label.userList.email=Email
-label.userList.password=Password
-label.userList.role=Role
-label.userList.edit=Edit
-label.userList.assignQuiz=Assign Quiz
-label.userList.unassignQuiz=Unassign Quiz
-label.userList.registerStudent=Register Student
-label.userList.registerUser=Register Any User
+label.editSubject = Изменить тему
+label.editSubject.name = Имя:
+label.editSubject.submit = Изменить тему
+label.editUser = Править Студент
+label.editUser.name = Имя:
+label.editUser.surname = Фамилия:
+label.editUser.email = E-mail:
+label.editUser.submit = Править Студент
 
-label.avaliableQuizes=Avaliable for passing Quizes
-label.avaliableQuizes.id=Id
-label.avaliableQuizes.name=Name
-label.avaliableQuizes.subject=Subject
-label.avaliableQuizes.startPassing=Start passing
+label.registerUser = Регистрация Студент
+label.registerUser.name = Имя:
+label.registerUser.surname = Фамилия:
+label.registerUser.email = E-mail:
+label.registerUser.password = Пароль:
+label.registerUser.role = Роль:
+label.registerUser.confirmPassword = Подтвердите пароль:
+label.registerUser.submit = Регистрация Студента
 
-label.passQuestion=Passing Quiz 
-label.passQuestion.answer=Answer
+label.register.role = Роль:
+label.register.submit = Регистрация
 
-label.personalInfo=Personal Information
-label.personalInfo.name=First Name:
-label.personalInfo.surname=Last Name:
-label.personalInfo.email=Email:
-label.personalInfo.role=Role
+label.subjectList = Все предметы
+label.subjectList.addSubject = Добавить тему
+label.subjectList.id = Ид
+label.subjectList.name = Имя
+label.subjectList.edit = Править
+label.subjectList.remove = Удалить
 
-label.quizExtenderResult=Result
-label.quizExtenderResult.quizName=Quiz Name
-label.quizExtenderResult.startTime=Start Time
-label.quizExtenderResult.finishTime=Finish Time
-label.quizExtenderResult.rightAnswers=Right Answers
-label.quizExtenderResult.wrongAnswers=Wrong Answers
-label.quizExtenderResult.percent=Percent
-label.quizExtenderResult.questions=Questions
-label.quizExtenderResult.variants=Variants
-label.quizExtenderResult.rightAnswer=Right Answer
-label.quizExtenderResult.yourAnswer=Your Answer
+label.userList = Все студенты
+label.userList.id = Ид
+label.userList.name = Имя
+label.userList.surname = Фамилия
+label.userList.email = E-mail
+label.userList.password = Пароль
+label.userList.role = Роль
+label.userList.edit = Править
+label.userList.assignQuiz = Назначить Тест
+label.userList.unassignQuiz = Отменить назначение Тест
+label.userList.registerStudent = Регистрация Студент
+label.userList.registerUser = Регистрация Любой пользователь
 
-label.quizResult.result=User Results of Quizes
-label.quizResult.id=Id
+label.avaliableQuizes = Доступные для прохождения тесты
+label.avaliableQuizes.id = Ид
+label.avaliableQuizes.name = Имя
+label.avaliableQuizes.subject = Тема
+label.avaliableQuizes.startPassing = Запуск прохождения
+
+label.passQuestion = Прохождение Теста
+label.passQuestion.answer = Ответить
+
+label.personalInfo = Персональная информация
+label.personalInfo.name = Имя:
+label.personalInfo.surname = Фамилия:
+label.personalInfo.email = E-mail:
+label.personalInfo.role = Роль
+
+label.quizExtenderResult = Результат
+label.quizExtenderResult.quizName = Тест
+label.quizExtenderResult.startTime = Время
+label.quizExtenderResult.finishTime = Время окончания
+label.quizExtenderResult.rightAnswers = Правильные ответы
+label.quizExtenderResult.wrongAnswers = Неправильные ответы
+label.quizExtenderResult.percent = Процент
+label.quizExtenderResult.questions = Вопросы
+label.quizExtenderResult.variants = Варианты
+label.quizExtenderResult.rightAnswer = правильный ответ
+label.quizExtenderResult.yourAnswer = Ваш ответ
+
+label.quizResult.result = Система Результаты тесты
+label.quizResult.id = Ид
