quiz passing progress added with multiole fixes

--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -18,6 +18,8 @@ label.headerUserQuizes=Quizes
 label.headerUserResults=Results
 label.headerUserPersonal=Personal
 label.headerAllUsers= Users
+label.headerPassQuiz=Passing:
+label.headerStartTime=Start:
 
 label.addQuestionToQuiz.addQuestion=Add Question to Quiz:
 label.Description=Description
@@ -106,6 +108,9 @@ label.avaliableQuizes.startPassing=Start passing
 
 label.passQuestion=Passing Quiz 
 label.passQuestion.answer=Answer
+label.passQuestion.answered=Answered:
+label.passQuestion.remain=Remain:
+
 
 label.personalInfo=Personal Information
 label.personalInfo.name=First Name:
