--- a/src/main/resources/label_ru_RU.properties
+++ b/src/main/resources/label_ru_RU.properties
@@ -18,6 +18,8 @@ label.headerUserQuizes = Доступные Тесты
 label.headerUserResults = Результаты
 label.headerUserPersonal = Персональная информация
 label.headerAllUsers = Пользователи
+label.headerPassQuiz=Прохождение:
+label.headerStartTime=Начало:
 
 label.addQuestionToQuiz.addQuestion = Добавить вопрос к тесту:
 
@@ -108,6 +110,8 @@ label.avaliableQuizes.startPassing = Запуск прохождения
 
 label.passQuestion = Прохождение Теста
 label.passQuestion.answer = Ответить
+label.passQuestion.answered = Отвечено:
+label.passQuestion.remain = Осталось:
 
 label.personalInfo = Персональная информация
 label.personalInfo.name = Имя:
