Validation completely done

--- a/src/main/resources/i18n/label_en.properties
+++ b/src/main/resources/i18n/label_en.properties
@@ -50,7 +50,7 @@ label.editQuiz.addQuestion=Add Question To Quiz
 label.editQuiz.questions=Questions
 label.editQuiz.removeQuestion=Remove
 label.editQuiz.confirmRemove=Confirm Remove
-label.editQuiz.changeDescription=Change Description
+label.editQuiz.changeDescription=Save Changes
 label.editQuiz.variants=Variants:
 label.editQuiz.addVariantToQuestion=Add Variant to Question
 label.editQuiz.description=Description
@@ -132,3 +132,5 @@ label.quizExtenderResult.yourAnswer=Your Answer
 
 label.quizResult.result=User Results of Quizes
 label.quizResult.id=Id
+
+label.editQestion= Edit Question
