--- a/src/main/resources/i18n/label_ru_RU.properties
+++ b/src/main/resources/i18n/label_ru_RU.properties
@@ -133,3 +133,5 @@ label.quizExtenderResult.yourAnswer = Ваш ответ
 
 label.quizResult.result = Система Результаты тесты
 label.quizResult.id = Ид
+
+label.editQestion= Править Вопрос
