IndexPage support added

--- a/src/main/resources/i18n/label_en.properties
+++ b/src/main/resources/i18n/label_en.properties
@@ -134,3 +134,6 @@ label.quizResult.result=User Results of Quizes
 label.quizResult.id=Id
 
 label.editQestion= Edit Question
+
+label.userList.passingResults = Results
+label.removeResult=Remove
