--- a/src/main/resources/i18n/label_ru_RU.properties
+++ b/src/main/resources/i18n/label_ru_RU.properties
@@ -53,7 +53,7 @@ label.editQuiz.addQuestion = Добавить вопрос тесты
 label.editQuiz.questions = Вопросы
 label.editQuiz.removeQuestion = Удалить
 label.editQuiz.confirmRemove = Подтвердите
-label.editQuiz.changeDescription =  Изменить Описание
+label.editQuiz.changeDescription =  Cохранить изменения
 label.editQuiz.variants = Варианты:
 label.editQuiz.addVariantToQuestion = Добавить Вариант ответа
 label.editQuiz.description = Описание
@@ -135,3 +135,6 @@ label.quizResult.result = Система Результаты тесты
 label.quizResult.id = Ид
 
 label.editQestion= Править Вопрос
+
+label.userList.passingResults = Результаты
+label.removeResult=Удалить
