--- a/src/main/resources/i18n/label_ru_RU.properties
+++ b/src/main/resources/i18n/label_ru_RU.properties
@@ -121,7 +121,7 @@ label.personalInfo.role = Роль
 
 label.quizExtenderResult = Результат
 label.quizExtenderResult.quizName = Тест
-label.quizExtenderResult.startTime = Время
+label.quizExtenderResult.startTime = Время начала 
 label.quizExtenderResult.finishTime = Время окончания
 label.quizExtenderResult.rightAnswers = Правильные ответы
 label.quizExtenderResult.wrongAnswers = Неправильные ответы
